--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 
-	<link rel="icon" href="assets/img/favicon.png" />
+	<link rel="icon" href="assets/img/favicon2.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Saurabh Vyas</title>
