--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						</td>
 						<td>
 							<p class="custom-p">
-								Before coming to Stanford I was a research engineer at the Johns Hopkins University Applied Physics Laboratory, where I developed
+								After college, I was a research engineer at the Johns Hopkins University Applied Physics Laboratory, where I developed
 								machine learning and computer vision algorithms for a variety of applications including robotics, medical image analysis,
 								biophysical modeling, and remote sensing (e.g., <a href="https://pubmed.ncbi.nlm.nih.gov/23722495/">Vyas et al., <i>Journal of biomedical optics</i>, 2013</a>).
 							</p>
