--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 
-	<link rel="icon" href="assets/img/favicon2.png" />
+	<link rel="icon" href="assets/img/columbia_icon.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Saurabh Vyas</title>
@@ -60,7 +60,12 @@
 						</li>
 						<li>
 							<a href="mailto: sv2648@columbia.edu">
-								contact
+								email
+							</a>
+						</li>
+						<li>
+							<a href="https://twitter.com/SaurabhsNeurons">
+								twitter
 							</a>
 						</li>
 					</ul>
