--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="section section-basic">
 				<h3 class = "custom-header">about me</h3>
 				<p class="custom-p">
-					The computations performed by the brain are exceedingly remarkable - one need look no further than the seemingly impossible movements performed by Olympic athletes. However, even simple movements - like reaching for your morning cup of coffee - require a slew of brain regions to rapidly coordinate and generate highly complex patterns of activity that ultimately move your arm. The richness in this activity endows our nervous system with the ability to not only learn how to, for example, walk along a balance beam, but also make split-second mid-air decisions to stick that landing. I'm a neuroscientist who studies the computational and algorithmic principles surrounding such neural control of movement.
+					The computations performed by the brain are exceedingly remarkable - one need look no further than the seemingly impossible movements performed by Olympic athletes. However, even simple movements - like reaching for your morning cup of coffee - require a slew of brain regions to rapidly coordinate and generate highly complex patterns of activity that ultimately move your arm. The richness in this activity endows our nervous system with the ability to not only learn how to, for example, run along a balance beam, but also make split-second mid-air decisions to stick that landing. I'm a neuroscientist who studies the computational and algorithmic principles surrounding such neural control of movement.
 				</p>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 						</td>
 						<td>
 							<p class="custom-p">
-								I'm currently a postdoctoral research scientist in the Mortimer B. Zuckerman Mind Brain Behavior Institute at Columbia University working with Mark Churchland.
+								I'm currently a postdoctoral research scientist in the Mortimer B. Zuckerman Mind Brain Behavior Institute at Columbia University working with Mark Churchland. My research on motor control broadly leverages a computation through neural population dynamics framework, which I describe in detail in this review (<a href="https://pubmed.ncbi.nlm.nih.gov/32640928/">Vyas et al., <i>Annual Review of Neuroscience</i>, 2020</a>). 
 							</p>
 						</td>
 					</tr>
