--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				<div class="copyright pull-right">
 					&copy; 2017, made with
 					<i class="fa fa-heart heart"></i> by
-					<a href="https://www.linkedin.com/in/shantini-vyas-02a80745/">Shantini Vyas</a>
+					<a href="https://www.shantini.co">Shantini Vyas</a>
 				</div>
 			</div>
 		</footer>
