--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						</td>
 						<td>
 							<p class="custom-p">
-								I completed my Ph.D. at Stanford University advised by Krishna Shenoy in the Neural Prosthetic Systems Lab. My work revealed that neural activity in the motor cortex before the onset of movement, and even in the absence of movement altogether, could play a fundamental role in the algorithms underlying motor learning (e.g., <a href="https://pubmed.ncbi.nlm.nih.gov/29456026/">Vyas et al., <i>Neuron</i>, 2018</a>; <a href="https://pubmed.ncbi.nlm.nih.gov/32053768/">Vyas et al. <i>Neuron</i>, 2020</a>). 
+								I completed my Ph.D. at Stanford University advised by Krishna Shenoy in the Neural Prosthetic Systems Lab. My work revealed that neural activity in the motor cortex before the onset of movement, and even in the absence of movement altogether, could play a fundamental role in the algorithms underlying motor learning (e.g., <a href="https://pubmed.ncbi.nlm.nih.gov/29456026/">Vyas et al., <i>Neuron</i>, 2018</a>; <a href="https://pubmed.ncbi.nlm.nih.gov/32053768/">Vyas et al. <i>Neuron</i>, 2020</a>). <br>In 2021, my thesis was awarded <a href="https://grassfoundation.org/people/saurabh-vyas/"><b>The Donald B. Lindsley Prize in Behavioral Neuroscience</b></a> by The Grass Foundation and The Society for Neuroscience (this award recognizes an outstanding Ph.D. thesis in the general area of behavioral neuroscience).
 							</p>
 						</td>
 					</tr>
