--- a/research.html
+++ b/research.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research | LOGIC</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" sizes="225x225">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS -->
 </head>
 <body>
