--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
-  <!-- Navigation Bar -->
+ 
+ <!-- Navigation Bar -->
   <header>
     <nav class="navbar">
       <div class="logo">
-      <!-- Wrap the logo in a link to make it clickable -->
-      <a href="https://cmu.edu/ni">
-        <img src="images/CMU-red-600x600.png" alt="CMU-logo" class="logo-img">
-      </a>
+        <!-- Wrap the logo in a link to make it clickable -->
+        <a href="https://cmu.edu/ni">
+          <img src="images/CMU-red-600x600.png" alt="CMU-logo" class="logo-img">
+        </a>
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -25,9 +26,16 @@
         <li><a href="mentorship.html">Mentorship</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <!-- Hamburger Menu Icon -->
+      <div class="hamburger" id="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </nav>
   </header>
-
+  
+  
   <!-- Hero Section (Big Picture) -->
   <section class="hero">
     <div class="hero-image">
