--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,16 @@
         <img src="images/CMU-red-600x600.png" alt="CMU-logo" class="logo-img">
       </a>
       </div>
-      <ul class="nav-links">
+
+<!-- Hamburger Menu Icon -->
+    <div class="hamburger" id="hamburger" onclick="toggleMenu()">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+
+     <!-- Navigation Links -->
+    <ul class="nav-links" id="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="members.html">Members</a></li>
@@ -148,6 +157,16 @@ Vyas S, Banerjee A, Burlina P<br>
         <p>Laboratory of General Intelligence and Computation </p>
         <p>&copy; 2025 Carnegie Mellon University</p>
      </footer>
+     
+     <!-- Optional: Scripts -->
+  <script>
+    // JavaScript to toggle the menu visibility
+    function toggleMenu() {
+      const navLinks = document.getElementById('nav-links');
+      navLinks.classList.toggle('active');  // Toggle the active class on the nav links
+    }
+  </script>
+
 
 </body>
 </html>
