--- a/mentorship.html
+++ b/mentorship.html
@@ -73,19 +73,19 @@
 
 <p>I like being present in the lab, and I take mentorship seriously, both on the big-picture ideas and the nitty-gritty details. Along with others in the lab, I’ll teach you what you need to know to pursue the research that excites you most. Sometimes that means stepping back and thinking big: What are the major open questions in the field? How can we meaningfully move the needle? Other times, it means getting into the weeds, like figuring out what clock speed RAM to buy for a neurophysiology rig.
 You’ll learn a wide range of skills here, including:</p>
-  <p>- Animal behavior training and handling</p>
-  <p>- Designing and building experimental rigs (both hardware and software)</p>
-  <p>- Building custom high-performance, real-time systems</p>
-  <p>- Computer networking and system integration </p>
-  <p>- Performing surgeries and acute neural recordings</p>
-   <p>- Creating scalable data infrastructure for 100s of terabytes of data</p>
-   <p>- Writing software pipelines for data processing and analysis </p>
-   <p>- Building models of neural activity and behavior, including neural networks </p>
-   <p>- Designing visualizations that are both effective and (ideally) aesthetically pleasing </p>
-   <p>- Running rigorous, reproducible analyses — including statistical modeling</p>
-    <p>- Turning results into manuscripts, grants, and fellowships</p>
-    <p>- Preparing and giving talks and posters </p> 
-    <p>- Navigating the job market and setting yourself up for long-term success</p>         
+  <p>&starf; Animal behavior training and handling</p>
+  <p>&starf; Designing and building experimental rigs (both hardware and software)</p>
+  <p>&starf; Building custom high-performance, real-time systems</p>
+  <p>&starf; Computer networking and system integration </p>
+  <p>&starf; Performing surgeries and acute neural recordings</p>
+   <p>&starf; Creating scalable data infrastructure for 100s of terabytes of data</p>
+   <p>&starf; Writing software pipelines for data processing and analysis </p>
+   <p>&starf; Building models of neural activity and behavior, including neural networks </p>
+   <p>&starf; Designing visualizations that are both effective and (ideally) aesthetically pleasing </p>
+   <p>&starf; Running rigorous, reproducible analyses, including statistical modeling</p>
+    <p>&starf; Turning results into manuscripts, grants, and fellowships</p>
+    <p>&starf; Preparing and giving talks and posters </p> 
+    <p>&starf; Navigating the job market and setting yourself up for long-term success</p>         
 <br>
 
 
