--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p>We are thrilled to welcome Krystal Luo and Shaoyi Liu to the lab as Master's students in Biomedical Engineering (research track). Learn about them and their interests on the <a href="members.html">Members</a> page</p>
     </div>
     <div class="news-item">
-      <h3>Logic website is live!</h3>
+      <h3>LOGIC website is live!</h3>
       <p><strong>Posted:</strong> August 01, 2025</p>
     </div>
   </section>
