--- a/members.html
+++ b/members.html
@@ -14,8 +14,8 @@
     <nav class="navbar">
       <div class="logo">
       <!-- Wrap the logo in a link to make it clickable -->
-      <a href="https://cmu.edu/ni">
-        <img src="images/CMU-red-600x600.png" alt="CMU-logo" class="logo-img">
+      <a href="index.html">
+        <img src="images/lab-logo-small.pdf" alt="lab-logo" class="logo-img">
       </a>
       </div>
 <!-- Hamburger Menu Icon -->
