--- a/members.html
+++ b/members.html
@@ -63,22 +63,40 @@
     </div>
 
     <!-- Add more members here in similar structure -->
-    <!-- Member 4 -->
+    <!-- Member -->
     <div class="member-card">
         <div class="member-img">
             <img src="images/KrystalLuo.jpg" alt="Krystal Luo">
         </div>
         <div class="member-info">
             <h2>Krystal Luo</h2>
-            <p class="title">Master's Student, Biomedical Engineering (research track)</p>
+            <p class="title">Master's Student</p>
+            <p class="title">Biomedical Engineering (research track)</p>
         </div>
         
         <div class="cv-box">
-                <a href="assets/CV_Luo.pdf" class="cv-link">Download CV</a>
+                <a href="assets/CV_K-Luo.pdf" class="cv-link">Download CV</a>
             </div>
     </div>
+
+    <!-- Member -->
+    <div class="member-card">
+        <div class="member-img">
+            <img src="images/ShaoyiLiu.jpg" alt="Shaoyi Liu">
+        </div>
+        <div class="member-info">
+            <h2>Shaoyi Liu</h2>
+            <p class="title">Master's Student</p>
+            <p class="title">Biomedical Engineering (research track)</p>
+        </div>
+        
+        <div class="cv-box">
+                <a href="assets/CV_S-Liu.pdf" class="cv-link">Download CV</a>
+            </div>
+    </div>
+
    
-    <!-- Member 4 -->
+    <!-- Member -->
     <div class="member-card">
         <div class="member-img">
             <img src="images/merlin-and-pokey.jpeg" alt="Pokey and Merlin">
