--- a/mentorship.html
+++ b/mentorship.html
@@ -52,7 +52,7 @@
 
 <p>The short answer is: no. To be totally transparent, succeeding in our lab will eventually require you to be reasonably competent in several of those areas. But you don’t need to walk in already knowing them. My job is to help you build the knowledge and skills you’ll need. </p><br>
 
-<p>If you've graduated from college, you likely already have the critical thinking skills needed to get started. I mean this sincerely: as long as you bring curiosity, an open mind, and a strong willingness to learn, there are no formal prerequisites for joining our lab. Of course, prior experience in some of these fields will help you get up to speed faster. But if you're motivated, willing to put in the effort, and open to learning across disciplines, you can absolutely thrive here - no matter your starting point.</p><br>
+<p>If you've graduated from college, you likely already have the critical thinking skills needed to get started. I mean this sincerely: as long as you bring curiosity, an open mind, and a strong willingness to learn, there are no formal prerequisites for joining our lab. Of course, prior experience in some of these fields will help you get up to speed faster. But if you're motivated, willing to put in the effort, and open to learning across disciplines, you can absolutely thrive here - no matter your starting point.</p><br><br>
 
         <h1>What are my goals for LOGIC? </h1><br>
 
@@ -87,12 +87,12 @@ You’ll learn a wide range of skills here, including:</p>
     <p>&starf; Preparing and giving talks and posters </p> 
     <p>&starf; Navigating the job market and setting yourself up for long-term success</p>         
 <br>
+<br>
+
+        <h1>What do I think makes for a happy and successful lab?  </h1> <br><br>
 
 
-        <h1>What do I think makes for a happy and successful lab?  </h1> <br>
-
-
-<p><b>Be an active member of the team</b></p><br>
+<p><b>Be an active member of the team</b></p>
 
 <p>A healthy lab culture doesn’t just happen, it’s something we all build together. I expect everyone in LOGIC to contribute to the collective success of the group. That means asking your labmates how their work is going. How their animals are doing. How they are doing. If someone’s stuck, offer to help them brainstorm (if they’re open to it). If you’ve written code or built something that could be useful to them, share it.</p><br>
 
@@ -105,10 +105,11 @@ You’ll learn a wide range of skills here, including:</p>
 
 <p>When you leave the lab, I want you to feel ownership over what you've built. I want you to be proud of the skills you've developed, the ideas you've tested, and the discoveries you've made.</p><br>
 
-<p><b>Scientific integrity matters</b></p><br>
+<p><b>Scientific integrity matters</b></p>
+
 <p>We’re in the business of seeking truth. And right now, trust in science and medicine is fragile. That means we need to hold ourselves to the highest standards, not just in our work, but in how we think about that work. I’d rather you leave the lab with one solid, enduring piece of research than a handful of papers that don’t hold up under scrutiny. Being critical of our own results, and of our assumptions, is part of doing honest science. It’s something I deeply value and something I will always encourage.</p><br>
 
-<p><b>Your well-being comes first</b></p><br>
+<p><b>Your well-being comes first</b></p>
 <p>There will be times when you feel overwhelmed. That’s normal, it’s happened to me many times in my own training. What matters is knowing that you’re not alone. If you’re struggling, I want you to come talk to me. There is no scenario in which a project will ever take precedence over your health or well-being.</p><br>
 
 <p>Likewise, your time is valuable. If you're no longer excited about what you’re working on, I want to hear about it, even if it leads to a big change. I switched labs a couple years into my PhD, and I know how difficult - but necessary - that kind of pivot can be. Most of the time, the solution is simpler: we can work together to find a new direction that motivates you. My promise is this: I will do everything in my power to help you get back on track, and to make sure you're working on something that energizes you. My goal is for every person in this lab to be healthy, happy, successful, and productive - in that order.</p>
