--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="logo">
         <!-- Wrap the logo in a link to make it clickable -->
         <a href="https://cmu.edu/ni">
-          <img src="images/CMU-red-600x600.png" alt="CMU-logo" class="logo-img">
+          <img src="images/CMU-red.png" alt="CMU-logo" class="logo-img">
         </a>
       </div>
 
