--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
   <section class="news">
     <h2>Recent News</h2>
     <div class="news-item">
+      <h3>New rotation students!</h3>
+      <p><strong>Posted:</strong> January 10, 2026</p>
+      <p>We are excited to welcome first-year PhD students <a href="https://www.linkedin.com/in/jimmy-pulido-arias-0639411b3">Jimmy Pulido Arias</a> from the Program in Neural Computation at CMU, and <a href="https://www.cnup.pitt.edu/people/noah-lasky-nielson">Noah Lasky-Nielson</a> from the Center for Neuroscience at UPitt, as rotation students for the Spring 2026 semester! </p>
+    </div>
+    <div class="news-item">
       <h3>New lab members!</h3>
       <p><strong>Posted:</strong> October 27, 2025</p>
       <p>We are thrilled to welcome Krystal Luo and Shaoyi Liu to the lab as Master's students in Biomedical Engineering (research track). Learn about them and their interests on the <a href="members.html">Members</a> page</p>
