--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
   <!-- News Section -->
   <section class="news">
     <h2>Recent News</h2>
+<div class="news-item">
+  <h3>First lab meeting!</h3>
+  <p><strong>Posted:</strong> January 23, 2026</p>
+
+  <img 
+    src="images/First-Lab-meeting.jpg" 
+    alt="Group photo from the first lab meeting."
+    class="news-image"
+  >
+  <p>
+The first-ever LOGIC group meeting! Pictured from left to right are Shaoyi, Noah, Saurabh, Jimmy, and Krystal. 
+  </p>
+</div>
+
+
     <div class="news-item">
       <h3>New rotation students!</h3>
       <p><strong>Posted:</strong> January 10, 2026</p>
