--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     class="news-image"
   >
   <p>
-The first-ever LOGIC group meeting! Pictured from left to right are Shaoyi, Noah, Saurabh, Jimmy, and Krystal. 
+The first-ever LOGIC group meeting! Pictured from left to right are Shaoyi, Noah, Saurabh, Jimmy, and Krystal. <br>
+<i>Photo credit: <a href="https://www.linkedin.com/in/jimmy-pulido-arias-0639411b3">Jimmy Pulido Arias</a></i>
   </p>
 </div>
 
