--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
   <section class="news">
     <h2>Recent News</h2>
 <div class="news-item">
+  <h3>Lab's first compute machine is up!</h3>
+  <p><strong>Posted:</strong> February 6, 2026</p>
+
+  <img 
+    src="images/Lab-first-compute.jpg" 
+    alt="Group photo from the lab's first compute machine."
+    class="news-image"
+  >
+  <p>
+The lab's first compute machine is built and off the ground! Designed and constructed by Jimmy (left), Krystal (middle back), and Noah (right). <br>
+  </p>
+</div>
+
+
+
+<div class="news-item">
   <h3>First lab meeting!</h3>
   <p><strong>Posted:</strong> January 23, 2026</p>
 
