--- a/members.html
+++ b/members.html
@@ -95,6 +95,22 @@
             </div>
     </div>
 
+
+    <div class="member-card">
+        <div class="member-img">
+            <img src="images/EthanWallace.jpeg" alt="Ethan Wallace">
+        </div>
+        <div class="member-info">
+            <h2>Ethan Wallace</h2>
+            <p class="title">Neuroscience Research Technician</p>
+        </div>
+        
+        <div class="cv-box">
+                <a href="assets/CV_E-Wallace.pdf" class="cv-link">Download CV</a>
+            </div>
+    </div>
+
+
    
     <!-- Member -->
     <div class="member-card">
